syntax = "proto3";

package bread;

import "github.com/sr/operator/operator.proto";

option go_package = "breadpb";

// Deploy any of the projects listed on Canoe and internal apps hosted AWS/ECS
service Deploy {
	option (operator.enabled) = true;

	// List what can be deployed
	rpc ListTargets(ListTargetsRequest) returns (ListTargetsResponse);
	// List the ten most recent builds for a given target
	rpc ListBuilds(ListBuildsRequest) returns (ListBuildsResponse);
	// Trigger a deploy of a build to given target
	rpc Trigger(TriggerRequest) returns (TriggerResponse);
}

message ListTargetsRequest {
}

message ListTargetsResponse {
}

message ListBuildsRequest {
	string target = 1;
	string branch = 2;
}

message ListBuildsResponse {
}

message TriggerRequest {
	string target = 1;
	string build = 2;
	string branch = 3;
}

message TriggerResponse {
	string message = 1;
}
