syntax = "proto3";

package hal9000;

option go_package = "hal9000";

service Robot {
	rpc IsMatch(Message) returns (Response);
	rpc Dispatch(Message) returns (Response);
}

message Message {
	string text = 1;
	User user = 2;
	string room = 3;
}

message User {
	string email = 1;
	string name = 2;
}

message Response {
	bool match = 1;
}
